# pySIMS

./: README.md  isotope.py  pySIMS.py  pyproject.toml  requirements.txt
Data/: D3GZ46.dp_rpc_txt  D4GZ46.ms_rpc_txt  E3SITEST84.nrj_rpc_txt
docs/source/: conf.py  index.rst  structure.rst
docs/source/datamodel/: datamodel.rst  grammar.rst  index.rst  semantic.rst
docs/source/energy/: energy.rst  energyspectrum.rst  index.rst
docs/source/mass/: index.rst  isotopes.rst  massspectrum.rst
docs/source/multilayer/: depthprofile.rst  index.rst
src/: Data_format.md  grammar.ebnf  semantic.py  sims_reader.py
src/datamodel/: grammar.ebnf  semantic.py
src/pysims/datamodel/: __init__.py  datamodel.py  grammar.ebnf  semantic.py
src/pysims/energy/: energyspectrum.py
src/pysims/mass/: massspectrum.py
src/pysims/multilayer/: depthprofile.py  profilometer.py
src/pysims/utils/: utils.py
test/: parser_test.py  semantic_test.py
test/files/: expected_nrj.txt  input.dp  input.ms  input.nrj
test/files/parser_grammar_output/: expected_dp.txt  expected_ms.txt
test/files/parser_semantic_output/: expected_dp.txt  expected_ms.txt  expected_nrj.txt
